--- a/Readme.org
+++ b/Readme.org
@@ -1,5 +1,10 @@
 #+TITLE: 元始天尊說東嶽化身濟生度死拔罪解冤保命玄範誥咒妙經 / CK-KZ
 
 #+DATE: 2015-08-29 03:02:38.749497
-* 目次
+* 版本
+ |     CK-KZ|【重刊道藏輯要】|
+ |       HFL|【正統道藏・涵芬樓版】|
+ |      YP-C|【原版道藏輯要】|
+ |      ZTDZ|【正統道藏・三家本】|
+目次
  - [[file:KR5h0010_000.txt][元始天尊說東嶽化身濟生度死拔罪解冤保命玄範誥咒妙經 0]]
